k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubii-app
  namespace: app
  labels:
    app: app
    env: production
spec:
  selector:       #Quais pods vão ser expostos
    app: app    #Seleciona os Pods com essa label
  ports:
  - port: 80      #Porta do serviço
    name: http
    targetPort: 8080   #A porta onde o cluster tá escutando
  type: ClusterIP
