k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubii-app
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.hubii
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service: 
            name: hubii-app
            port:
              number: 80
